pushing final code for submission

--- a/highscores.html
+++ b/highscores.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Random Header</h1>
+    <main>
+        <section class="box" id="main-display">
+            <h1>High Scores</h1>
+            <ul id="scores">
+                <!-- Store scores here with local storage -->
+            </ul>
+        </section>
+    </main>
+    <script src="./assets/js/scores.js"></script>
 </body>
+
 </html>
