--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <main>
-        <section class="box">
+        <header class="indicator" id="indicator"></header>
+        <section class="box" id="main-display">
             <div>
                 <a href="./highscores.html">View high scores</a>
                 <span>
